# cvm-insiders-ibovespa

./: .gitignore  CLAUDE.md  Makefile  README.md  config.py  dashboard.py  dashboard_fallback.html  fetch.py  history.py  make_shareable.py  monitor.py  parse_ipe.py  parse_vlmo.py  pyproject.toml  recompra.py  recompra_history.parquet  report.py  requirements.txt  resolver.py  theme.py
.github/workflows/: update.yml
examples/: dashboard_preview.html
